fixed overflow of participant address input

--- a/src/components/Dashboard/CreatePool/CreatePool.css
+++ b/src/components/Dashboard/CreatePool/CreatePool.css
@@ -12,6 +12,7 @@
 }
 .cp-form {
     margin: 5vh 0;
+    overflow: auto;
 }
 .cp-submit-form-item {
     padding: 5vh 0;
